MDEV-10518: Large wsrep_gtid_domain_id may break IST

wsrep_gtid_domain_id was incorrectly being parsed and stored
as a signed long number on the joiner node.